Fixed creations section block spacing; added explicit intrinsic dimensions to each image.

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@ h2 {
 .flex-row {
   display: flex;
   gap: var(--gap, 1rem);
+  align-items: center;
 }
 
 .flex-column-to-row {
@@ -404,8 +405,9 @@ h2 {
   height: 1.5rem; /* 24px only */
 }
 .logo a > img {
-  max-height: 100%;
   aspect-ratio: 6;
+  max-height: 100%;
+  width: auto;
 }
 .logo a:focus-visible {
   outline: 2px dashed var(--clr-white);
@@ -559,7 +561,8 @@ h2 {
 }
 .section-creations {
   display: grid;
-  gap: 3rem; /* 48px */
+  gap: 3rem;
+  gap: clamp(3rem, 1rem + 8vw, 5rem); /* (m) 48px -> (d) 80px */
   grid-template-areas: "heading" "cards" "button";
 }
 
